Fix french translation on typo and grammar mistakes - Manuel BERROCAL

--- a/cgi-bin/lang/fr_FR/globals.html
+++ b/cgi-bin/lang/fr_FR/globals.html
@@ -4,32 +4,32 @@ Cette interface est utilisée pour la définition des paramètres globaux de SquidG
 
 <h4>Répertoire de log:</h4>
 <pre>
-	Ce paramètre obligatoires permet de définir le répertoire de base dans
-	lequel seront sauvegardés les logs.
-	Par défaut: /usr/local/squidGuard/logs
+    Ce paramètre obligatoire permet de définir le répertoire de base dans
+    lequel seront sauvegardés les logs.
+    Par défaut: /usr/local/squidGuard/logs
 </pre>
 
 <h4>Répertoire des bases:</h4>
 <pre>
-	Ce paramètre obligatoires permet de définir le chemin complêt vers le
-	répertoire de stockage des base de données de listes.
-	Par défaut: /usr/local/squidGuard/db
+    Ce paramètre obligatoire permet de définir le chemin complet vers le
+    répertoire de stockage des base de données de listes.
+    Par défaut: /usr/local/squidGuard/db
 </pre>
 
 <h4>Base de données MySQL:</h4>
 <pre>
-	Si votre version de SquidGuard est supérieure ou égale à 1.4 vous pouvez
-	utiliser une base de données MySQL pour rechercher des utilisateurs lors
-	de la définition de vos sources. Si vous utiliser cette possibilité vous
-	devez definir les différents paramètres  de connexion a une base MySQL
-	dans la section "Extraction des utilisateurs depuis MySQL".
+    Si votre version de SquidGuard est supérieure ou égale à 1.4 vous pouvez
+    utiliser une base de données MySQL pour rechercher des utilisateurs lors
+    de la définition de vos sources. Si vous utilisez cette possibilité, vous
+    devez definir les différents paramètres de connexion à une base MySQL
+    dans la section "Extraction des utilisateurs depuis MySQL".
 </pre>
 
 <h4>Base de données LDAP:</h4>
 <pre>
-	Si votre version de SquidGuard est supérieure ou égale à 1.4 vous pouvez
-	utiliser une base de données LDAP pour rechercher des utilisateurs lors
-	de la définition de vos sources. Si vous utiliser cette possibilité vous
-	devez definir les différents paramètres  de connexion a une base LDAP
-	dans la section "Extraction des utilisateurs depuis LDAP".
+    Si votre version de SquidGuard est supérieure ou égale à 1.4 vous pouvez
+    utiliser une base de données LDAP pour rechercher des utilisateurs lors
+    de la définition de vos sources. Si vous utilisez cette possibilité, vous
+    devez definir les différents paramètres  de connexion à un annuaire LDAP
+    dans la section "Extraction des utilisateurs depuis LDAP".
 </pre>
