--- a/cgi-bin/lang/fr_FR/acl.html
+++ b/cgi-bin/lang/fr_FR/acl.html
@@ -1,9 +1,9 @@
 <p>
-Les liste de contrôle d'accès, ACL, permettent de combiner les définitions pécédentes d'object dans des règles distinctes pour chaque source ou dans une acl par défaut.
+Les liste de contrôle d'accès, ACL, permettent de combiner les définitions précédentes d'object dans des règles distinctes pour chaque source ou dans une acl par défaut.
 </p>
 
 <p>
-La règle par défaut définie le contrôle d'accès après toutes les autres polices définies. Par exemple, si vous définissez une régle de récriture dans cette règle, elle sera utilisée pour toutes les acl qui n'ont pas pas de règle de récriture définie. (i.e. toutes les polices ou acl définies héritent des définitions de la police par défaut). La régle par défaut est aussi utilisée pour toutes les sources ou clients qui ne sont pas concernés par les définitions de sources.
+La règle par défaut définit le contrôle d'accès après toutes les autres polices définies. Par exemple, si vous définissez une règle de réécriture dans cette règle, elle sera utilisée pour toutes les acl qui n'ont pas pas de règle de récriture définie. (par ex. toutes les polices ou acl définies héritent des définitions de la police par défaut). La règle par défaut est aussi utilisée pour toutes les sources ou clients qui ne sont pas concernés par les définitions de sources.
 </p>
 
 <p>
@@ -23,7 +23,7 @@ Les options <b>DNS Whitelist</b> permettent l'utilisation de listes blanches ser
 </p>
 
 <p>
-<b>Interdire l'accès vers</b> est utiliser pour interdir l'accès aux destinations définies dans des groupes de "liste noire" (i.e. l'utilisateur sera redirigé vers l'URL de redirection si la destination correspond à une entrée dans l'une de ces liste). Ce qui veut dire qu'une URL de redirection doit être définie soit dans le groupe de destiantion, soitr dans l'acl actuelle soit dans l'acl par défaut.
+<b>Interdire l'accès vers</b> est utiliser pour interdir l'accès aux destinations définies dans des groupes de "liste noire" (par ex. l'utilisateur sera redirigé vers l'URL de redirection si la destination correspond à une entrée dans l'une de ces liste). Ce qui veut dire qu'une URL de redirection doit être définie soit dans le groupe de destination, soit dans l'acl actuelle, soit dans l'acl par défaut.
 </p>
 
 <p>
@@ -31,7 +31,7 @@ Les options <b>DNS Blacklist</b> permettent l'utilisation de listes noires servi
 </p>
 
 <p>
-<b>Utiliser les régles de réécriture</b> permet de définir les règle de récriture à appliquer pour la police actuelle.
+<b>Utiliser les règles de réécriture</b> permet de définir les règles de récriture à appliquer pour la police actuelle.
 </p>
 
 <p>
@@ -39,6 +39,6 @@ Les options <b>DNS Blacklist</b> permettent l'utilisation de listes noires servi
 </p>
 
 <p>
-La partie <b>sinon</b> de la declaration de l'acl peut être utilisée uniquement dans le cas ou une contrainte de temps (<b>Horaire</b>) a été définie.
+La partie <b>sinon</b> de la declaration de l'acl peut être utilisée uniquement dans le cas où une contrainte de temps (<b>Horaire</b>) a été définie.
 </p>
 
