Apply v1.7 changes to github that seems to be reveted to v1.6.

--- a/cgi-bin/lang/fr_FR/bledit.html
+++ b/cgi-bin/lang/fr_FR/bledit.html
@@ -1,18 +1,18 @@
-<p>Les champs <b>Alias</b> et <b>Description</b> ci-dessus peuvent être utilisés pour traduire et décrire les différentes listes pour une meilleur compréhension de l'interface utilisateur.</p>
+<p>Les champs <b>Alias</b> et <b>Description</b> ci-dessus peuvent être utilisé pour traduire et  décrire les différentes listes pour une meilleur compréhension de l'interface utilisateur.</p>
 <p>
-<b>Domaines</b> : n'importe quelle chaine de caractère qui peut être trouvée dans la partie 'hostname' de l'URL<br>
-<b>Urls</b> : n'importe quelle chaine de caractère qui peut etre trouvée dans la partie 'hostname' et URI de l'URL<br>
-<b>Expressions</b> : n'importe quelle expression regex dont le pattern peut s'appliquer à une URL<br>
+<b>Domaines</b> : n'importe quelle chaine de charactere qui peut etre trouvée dans la partie 'hostname' de l'URL<br>
+<b>Urls</b> : n'importe quelle chaine de charactere qui peut etre trouvée dans la partie 'hostname' et URI de l'URL<br>
+<b>Expressions</b> : n'importe quelle expression regex dont le pattern peut s'appliqué à une URL<br>
 </p>
 
-<p>
-Ceci est une interface simplifiée pour l'ajout ou la suppression d'enregistrements dans les fichiers de liste des catégories ou filtres.
+<p>                                                                             
+Ceci est une interface simplifiée pou l'ajout ou la suppression d'enregistrements dans les fichiers de liste des catégories ou filtres.
 </p>
 <p>
-Simplement saisissez vos entrées dans le champ texte de un ou plusieurs type de blacklist et cliquez sur le bouton <b>Ajouter</b> pour insérer ces nouvelles entrées, ou cliquez sur le bouton <b>Supprimer</b> pour les ôter des fichiers concernés.
+Simplement saisissez vos entrées dans le champ texte de un ou plusieurs type de blacklist et cliquez sur le bouton <b>Ajouter</b> pour insérer ces nouvelles entrées ou cliquez sur le bouton <b>Supprimer</b> pour les oter des fichiers concernés.
 </p>
 <p>
-Vous pouvez ajouter/supprimer plusieurs entrées par type de liste en les saisissant ligne par ligne dans les zones de texte.
+Vous pouvez ajouter/supprimer plusieurs entrées par type de liste en les saisissant ligne par ligne dans les zone de texte.
 </p>
 <p>
 Si vous voulez éditer directement un fichier de l'un de ces types de liste, cliquez sur l'icone <b>Editer</b> de la liste correspondante.
