--- a/cgi-bin/lang/fr_FR/rewrites.html
+++ b/cgi-bin/lang/fr_FR/rewrites.html
@@ -1,16 +1,16 @@
 <p>
-Les groupes de règles de reécriture sont déclarées dans le style de substitution de sed.
+Les groupes de règle de reécriture sont déclarées dans le style de substitution de sed.
 </p>
-<p>Dans la case de saisie 'Remplacer' vous indiquez une expression régulière qui sera remplacée par la chaine de substitution definie dans la case de saisie 'par'. Par exemple:
+<p>Dans la case de saisie 'Remplacer' vous donnez une expression régulière qui sera remplacée par la chaine de substitution definie dans la case de saisie 'par'. Par exemple:
 </p>
 <pre>
-    Remplacer : .*\.olddomain\.com par : www\.newdomain\.com
+	Remplacer : .*\.olddomain\.com par : www\.newdomain\.com
 </pre>
 
 <p>
-- Selectionnez la case à cocher 'Minuscule+Majuscule' si la recherche doit être insensible à la casse.<br>
-- Selectionnez la case à cocher 'Signaler comme temporaire' si vous voulez que la redirection apparaisse à l'utilisateur comme code HTTP 302 - Moved Temporarily.<br>
-- Selectionnez la case à cocher 'Signaler comme permanent' si vous voulez que la redirection apparaisse à l'utilisateur comme code HTTP 301 - Moved Permanently.
+- Selectionnez la case a cocher 'Minuscule+Majuscule' si la recherche doit être insensible à la casse.<br>
+- Selectionnez la case a cocher 'Signaler comme temporaire' si vous voulez que la redirection apparaisse à l'utilisateur comme code HTTP 302 - Moved Temporarily.<br>
+- Selectionnez la case a cocher 'Signaler comme permanet' si vous voulez que la redirection apparaisse à l'utilisateur comme code HTTP 301 - Moved Permanently.
 </p>
 <p>
 Par défaut l'URL alternative est renvoyée de manière transparente pour l'utilisateur.
