--- a/cgi-bin/lang/fr_FR/sc_index.html
+++ b/cgi-bin/lang/fr_FR/sc_index.html
@@ -1,25 +1,25 @@
 <pre>
-    <b>Général:</b>
-        Ce menu permet la définition des paramètres généraux de SquidClamav.
+	<b>Général:</b>
+		Ce menu permet la définition des paramétres généraux de SquidClamav.
 
-    <b>Analyse des virus:</b>
-        Ce menu permet de désactiver l'antivirus sur la base d'expressions régulières sur les URLs ou le Content-Type des fichiers téléchargés.
+	<b>Analyse des virus:</b>
+		Ce menu permet de désactiver l'antivirus sur la base d'expression régulière sur les URLs ou le Content-Type des fichiers téléchargés.
 
-    <b>Listes blanches:</b>
-        Ce menu permet de définir quels sont les domaines ou nom de sites à inscrire en liste blanche, par ex. pour qu'ils ne soient soumis ni à l'antivirus ni aux listes de bloquage de SquidGuard.
+	<b>Listes blanches:</b>
+		Ce menu permt de définir quels snt les domaines ou nom de sites à inscrire en liste blanche, i-e qu'il ne seront pas soumis ni à l'antivirus ni au listes de bloquage de SquidGuard.
 
-    <b>Utilisateurs certifiés:</b>
-        Utilisez ce menu pour définir quels utilisateurs (RFC-931 usernames) seront exclus du scan antivirus et des listes de bloquage de SquidGuard.
+	<b>Utilisateurs certifiés:</b>
+		Utilisez ce menu pour définir quels utilisateurs (RFC-931 usernames) seront exclus du scan antivirus et des listes de bloquage de SquidGuard.
 
-    <b>Clients certifiés:</b>
-        Utilisez ce menu pour définir quels client (nom d'hôte et adresses ip) seront exclus du scan antivirus et des listes de bloquage de SquidGuard.
+	<b>Clients certifiés:</b>
+		Utilisez ce menu pour définir quels client (nom d'hôte et adresses ip) seront exclus du scan antivirus et des listes de bloquage de SquidGuard.
 
-    <b>Voir la configuration:</b>
-        Ce menu vous permet de visualiser le fichier de configuration de SquidClamav.
+	<b>Voir la configuration:</b>
+		Ce menu vous permet de visualiser le fichier de configuration de SquidClamav.
 
-    <b>Voir le log:</b>
-        Ce menu permet de consulter le log de SquidClamav.
+	<b>Voir le log:</b>
+		Ce menu permet de consulter le log de SquidClamav.
 
-    <b>Fermer:</b>
-        Ferme la fenêtre active de SquidClamav Manager.
+	<b>Fermer:</b>
+		Ferme la fenêtre active de SquidClamav Manager.
 </pre>
