--- a/cgi-bin/lang/fr_FR/sc_trustclients.html
+++ b/cgi-bin/lang/fr_FR/sc_trustclients.html
@@ -1,5 +1,5 @@
 <p>
-La définition des clients certifiés vous permet de désactiver l'appel aux blocklists de SquidGuard et de l'analyse antivirale lorsqu'une adresse ip ou un nom d'hôte correspond à l'une des expressions régulières définies ici. Lorsque l'expression est trouvée SquidClamav retourne immédiatement vers Squid, bien sûr Squid doit utiliser une méthode d'authentification.
+La définition des clients certifiés vous permet de désactiver l'appel au blocklists de SquidGuard et de l'analyse antivirale lorsque une adresse ip ou un nom d'hôte correspond à l'une des expressions régulières définies ici. Lorsque l'expression est trouvée SquidClamav retourne immédiatement vers Squid, bien sûr Squid doit utiliser une méthode d'authentification.
 </p>
 <p>
 Par exemple:
