--- a/cgi-bin/lang/en_US/blacklists.html
+++ b/cgi-bin/lang/en_US/blacklists.html
@@ -13,8 +13,8 @@ the domain, url and expression files of this list. You will also have a link
 to edit directly those files.
 </p>
 <p>
-The <b>Rebuild all databases</b> button allow you to reconstruct all Berkeley
-database of the whole lists. It's just like a "<i>squidguard -C all</i>"
+The <b>Rebuild all databases</b> button allows you to reconstruct all Berkeley
+database of the whole lists. It's just like running a "<i>squidguard -C all</i>"
 </p>
 <p>
 Some time it is difficult to know where a blacklisted domain or url is stored. Use the search form to know in witch list it appears. 
