--- a/cgi-bin/lang/en_US/categories.html
+++ b/cgi-bin/lang/en_US/categories.html
@@ -33,8 +33,8 @@ Thus you can pass usefull information to a more or less intelligent CGI page:
 </pre>   
 
 <p>
-The Log to file input box allow you to specify where redirects caused by match of this group should be logged. The value is is either a path relative to logdir  or an absolute path (i.e. /full/path) to a logfile
+The Log to file input box allows you to specify where redirects caused by match of this group should be logged. The value is either a path relative to logdir or an absolute path (i.e. /full/path) to a logfile
 </p>
 <p>
-If the anonymous option is specified the logged info is somewhat anonymized to protect the individual.
+If the anonymized option is specified the logged info is somewhat anonymized to protect individuals.
 </p>
