--- a/cgi-bin/lang/en_US/globals.html
+++ b/cgi-bin/lang/en_US/globals.html
@@ -1,8 +1,8 @@
-<p>This interface is used to defined all globals parameters in SquidGuard.</p>
+<p>This interface is used to define global parameters of SquidGuard.</p>
 
 <h4>Log directory:</h4>
 <pre>
-	This mandatory parameter is used to define the full path where logs
+	This mandatory parameter is used to define the full path where log
 	files will be written.
 	By default: /usr/local/squidGuard/logs
 </pre>
@@ -17,7 +17,7 @@
 <h4>MySQL Database:</h4>
 <pre>
 	If you have a SquidGuard version above or equal to 1.4 you can use a
-	mySQL database to find user into a source definition. If you plan to
+	mySQL database to find users into a source definition. If you plan to
 	do that, use the settings in the "Retrieving users from MySQL" part to
 	set the database connection parameters.
 </pre>
@@ -25,7 +25,7 @@
 <h4>LDAP Database:</h4>
 <pre>
 	If you have a SquidGuard version above or equal to 1.5 you can use a
-	LDAP database to find user into a source definition. If you plan to
+	LDAP database to find users into a source definition. If you plan to
 	do that, use the settings in the "Retrieving users from LDAP" part to
 	set the LDAP connection parameters.
 
