--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -1,34 +1,34 @@
 <pre>
 	<b>Globals:</b>
-		This menu allow you to define SquidGuard globals variables.
+		This menu allows you to define SquidGuard global variables.
 
 	<b>Schedules:</b>
-		This menu allow you to define schedules time to be used in other SquidGuard object (Sources, URL Rewrites, Filters and ACLs).
+		This menu allows you to define scheduled time to be used in other SquidGuard object (Sources, URL Rewrites, Filters and ACLs).
 
 	<b>Sources:</b>
 		Use this menu to define sources like users, groups, Ip addresses, range of Ip addresses or networks to apply policies on them.
 
 	<b>Url rewriting:</b>
-		This menu allow you to define as many as URL rewriting rules you want that will be applied by SquidGuard on pattern matching.
+		This menu allows you to define as many URL rewriting rules as you want that will be applied by SquidGuard on pattern matching.
 
 	<b>Filters:</b>
-		This menu allow you to defined URL destination groups based on the predefined lists of domain, url or regexp expressions.
+		This menu allows you to define URL destination groups based on the predefined lists of domain, url or regexp expressions.
 
 	<b>ACLs:</b>
-		This is the central place where you defined your access rules to apply to the different source object following the defined filter destination
+		This is the central place where you define your access rules to apply to the different source object following the defined filter destination
 
 	<b>View Configuration:</b>
-		This menu allow you to see the SquidGuard configuration file.
+		This menu allows you to see the SquidGuard configuration file.
 
 	<b>Manage Lists:</b>
-		This menu allow you to manage all lists by editing them fully or adding/removing entries.
+		This menu allows you to manage all lists by editing them fully or adding/removing entries.
 
 	<b>Logs:</b>
-		This menu allow you to consult all log files you'd defined in the SquidGuard configuration.
+		This menu allows you to consult all log files you'd defined in the SquidGuard configuration.
 
 	<b>SquidClamav:</b>
-		With this link you will display a similar interface to administer SquidClamav configuration file. This menu is enable only if you have SquidClamav installed on the system.
+		With this link you can access a similar interface to administer SquidClamav configuration file. This menu is enabled only if you have SquidClamav installed on the system.
 
 	<b>Restart Squid</b>
-		This menu allow you to 'reconfigure' Squid when all changes to SquidGuard and/or SquidClamav redirectors configuration files are done.
+		This menu allows you to 'reconfigure' Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
 </pre>
