--- a/cgi-bin/lang/en_US/logs.html
+++ b/cgi-bin/lang/en_US/logs.html
@@ -1,3 +1,3 @@
 <p>
-This interface allow you to view all logs stored under the logdir repository. Click on the filename to view it.
+This interface allows you to view latest entries in each logs stored under the logdir repository. Click on the filename to view it.
 </p>
