--- a/cgi-bin/lang/en_US/sc_trustclients.html
+++ b/cgi-bin/lang/en_US/sc_trustclients.html
@@ -1,5 +1,5 @@
 <p>
-The trusted client definition allow you to disable chained program and virus scan when a client source ip address or hostname match the search pattern. On regex found SquidClamav fallback to Squid instantly. Of course you must have Squid authentication helper enabled.
+The trusted client definition allows you to disable chained program and virus scan when a client source ip address or hostname matches the search pattern. On regex found SquidClamav fallbacks to Squid instantly. Of course you must have Squid authentication helper enabled.
 </p>
 <p>
 For example:
@@ -10,5 +10,5 @@ For example:
 	10\.18\.10\..*
 </pre>
 <p>
-will let clients with ip 192.168.1.10, with hostname myhomepc and any host under the 10.18.10.0/24 subnet to not be bored by chained program and virus scan.
+will let clients with ip 192.168.1.10, with hostname myhomepc and any host under the 10.18.10.0/24 subnet not be bored by chained program and virus scan.
 </p>
