--- a/cgi-bin/lang/en_US/sc_trustusers.html
+++ b/cgi-bin/lang/en_US/sc_trustusers.html
@@ -1,5 +1,5 @@
 <p>
-The trusted user definition allow you to disable chained program and virus scan when an user ident match the search pattern. On regex found SquidClamav fallback to Squid instantly. Of course you must have Squid authentication helper enabled.
+The trusted user definition allows you to disable chained program and virus scan when an user ident matches the search pattern. On regex found SquidClamav fallbacks to Squid instantly. Of course you must have Squid authentication helper enabled.
 </p>
 <p>
 For example:
@@ -8,5 +8,5 @@ For example:
 	administrator
 </pre>
 <p>
-will let user logged as administrator to not be bored by chained program and virus scan.
+will let user logged as administrator not be bored by chained program and virus scan.
 </p>
