--- a/cgi-bin/lang/en_US/bledit.html
+++ b/cgi-bin/lang/en_US/bledit.html
@@ -1,5 +1,5 @@
 <p>
-The fields <b>Alias</b> et <b>Description</b> above can be used to translate and detailled the blocklists for a better user understanding of the GUI interface.
+With the fields <b>Alias</b> and <b>Description</b> above, nickname and description can be tagged to the blacklist. This is solely for GUI comprehensibility and doesn't make any changes to SquidGuard's configuration.
 </p>
 <p>
 <b>Domains</b> : any string that can be found in the hostname part of the URL<br>
@@ -10,7 +10,7 @@ The fields <b>Alias</b> et <b>Description</b> above can be used to translate and
 This is a simple interface to add or remove entries in the blacklist files of a category or filter.                                              
 </p>
 <p>
-Just type your entries in the textarea for each type of blacklist and click on the <b>Remove</b> button if you want to remove it or click on the <b>Add</b> button to add them to the lists.
+Just type your entries in the textarea for each type of blacklist and click on the <b>Remove</b> button if you want to remove it or click on the <b>Add</b> button to add them to the list.
 </p>
 <p>
 You can add or remove multiple entries per type of list by typing them line by line in the textaera of the lists.
