--- a/cgi-bin/lang/en_US/rewrites.html
+++ b/cgi-bin/lang/en_US/rewrites.html
@@ -8,7 +8,7 @@ Rewrite rule groups, or rewrite rule sets if you prefer, are declared like sed s
 </pre>
 <p>
 - Select the 'Case insensitive' checkbox if the pattern search must be case insensitive.<br>
-- Select the 'Show move temporary' checkbox if you want to makes the redirection visible to the user with a HTTP code 302 - Moved Temporarily.<br>
+- Select the 'Show move temporary' checkbox if you want to make the redirection visible to the user with a HTTP code 302 - Moved Temporarily.<br>
 - Select the 'Show move permanently' checkbox if you want to makes the redirection visible to the user with a HTTP code 301 - Moved Permanently.
 </p>
 <p>
