--- a/cgi-bin/lang/en_US/sc_index.html
+++ b/cgi-bin/lang/en_US/sc_index.html
@@ -1,9 +1,9 @@
 <pre>
 	<b>Globals:</b>
-		This menu allow you to define SquidClamav globals variables.
+		This menu allows you to define SquidClamav global variables.
 
 	<b>Virus Scanning:</b>
-		This menu allow you to desactivate virus scan based on regex pattern on the URL or Content-Type.
+		This menu allows you to deactivate virus scan based on regex pattern on the URL or Content-Type.
 
 	<b>Whitelists:</b>
 		Use this menu to define which domain name or site hostname to whitelist, i-e there will be no virus scan nor call to SquidGuard on these site.
@@ -15,10 +15,10 @@
 		Use this menu to define which client hostnames or ip addresses will be excluded from virus scan and SquidGuard blocklists.
 
 	<b>View Configuration:</b>
-		This menu allow you to see the SquidClamav configuration file.
+		This menu allows you to see the SquidClamav configuration file.
 
 	<b>View log:</b>
-		This menu allow you to consult the SquidClamav log file.
+		This menu allows you to consult the SquidClamav log file.
 
 	<b>Close</b>
 		Use this to close the SquidClamav Manager window.
