English lang file mending 2

--- a/cgi-bin/lang/en_US/bledit.html
+++ b/cgi-bin/lang/en_US/bledit.html
@@ -1,5 +1,5 @@
 <p>
-With the fields <b>Alias</b> and <b>Description</b> above, nickname and description can be tagged to the blacklist. This is solely for GUI comprehensibility and doesn't make any changes to SquidGuard's configuration.
+With the fields <b>Alias</b> and <b>Description</b> above, nickname and description can be tagged to the blacklist. This is solely for GUI comprehensibility and doesn't make any changes to SquidGuard configuration.
 </p>
 <p>
 <b>Domains</b> : any string that can be found in the hostname part of the URL<br>
@@ -16,11 +16,11 @@ Just type your entries in the textarea for each type of blacklist and click on t
 You can add or remove multiple entries per type of list by typing them line by line in the textaera of the lists.
 </p>
 <p>
-If you want to edit the file of the lists directly, please click on the <b>Edit</b> icon.
+If you want to edit the list file directly, click on the <b>Edit</b> icon at the left of each textarea.
 </p>
 
 <p>
-After the last modification of these lists you must click on the <b>Rebuild database</b> icon to activate the changes.
+Once you finished modification of these lists, you must click on the <b>Rebuild database</b> icon to activate the changes.
 </p>
 
 
