--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -3,7 +3,7 @@
 		This menu allows you to define SquidGuard global variables.
 
 	<b>Schedules:</b>
-		This menu allows you to define scheduled time to be used in other SquidGuard object (Sources, URL Rewrites, Filters and ACLs).
+		This menu allows you to define scheduled time to be used in other SquidGuard objects (Sources, URL Rewrites, Filters and ACLs).
 
 	<b>Sources:</b>
 		Use this menu to define sources like users, groups, Ip addresses, range of Ip addresses or networks to apply policies on them.
@@ -15,7 +15,7 @@
 		This menu allows you to define URL destination groups based on the predefined lists of domain, url or regexp expressions.
 
 	<b>ACLs:</b>
-		This is the central place where you define your access rules to apply to the different source object following the defined filter destination
+		This is the central place where you define your access rules to apply to the different source objects following the defined filter destination.
 
 	<b>View Configuration:</b>
 		This menu allows you to see the SquidGuard configuration file.
@@ -27,8 +27,9 @@
 		This menu allows you to consult all log files you'd defined in the SquidGuard configuration.
 
 	<b>SquidClamav:</b>
-		With this link you can access a similar interface to administer SquidClamav configuration file. This menu is enabled only if you have SquidClamav installed on the system.
+		With this link you can access a similar interface to administer SquidClamav configuration file. This menu is enabled only if you have
+		SquidClamav installed on the system.
 
 	<b>Restart Squid</b>
-		This menu allows you to 'reconfigure' Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
+		This menu allows you to 'reconfigure' or quick-restart Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
 </pre>
