--- a/cgi-bin/lang/en_US/schedules.html
+++ b/cgi-bin/lang/en_US/schedules.html
@@ -2,7 +2,7 @@
 Time spaces, schedules or zones if you prefer, are declared by days of the week
 or dates with an optional time constraint for the date or day selection.
 </p>
-<p>Each schedule definition can be use as constraint in other object like sources, url rewriting and filters.
+<p>Each schedule definition can be used as constraint in other object like sources, url rewriting and filters.
 </p>
 <p>
 Overlaps are OK, and the result is the union.
