Term consistency in README and index

--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -15,10 +15,10 @@
 		This menu allows you to define URL destination groups based on the predefined lists of domain, url or regexp expressions.
 
 	<b>ACLs:</b>
-		This is the central place where you define your access rules to apply to the different source objects following the defined filter destination.
+		This is the central place where you define what source objects follow what filters and when. Here everything fits together.
 
 	<b>View Configuration:</b>
-		This menu allows you to see the SquidGuard configuration file.
+		This menu allows you to examine the SquidGuard configuration file.
 
 	<b>Manage Lists:</b>
 		This menu allows you to manage all lists by editing them fully or adding/removing entries.
@@ -27,8 +27,8 @@
 		This menu allows you to consult all log files you'd defined in the SquidGuard configuration.
 
 	<b>SquidClamav:</b>
-		With this link you can access a similar interface to administer SquidClamav configuration file. This menu is enabled only if you have
-		SquidClamav installed on the system.
+		This link leads you to the GUI interface to administer SquidClamav configuration file. This interface is enabled
+		only if you have SquidClamav installed on your system.
 
 	<b>Restart Squid</b>
 		This menu allows you to 'reconfigure' or quick-restart Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
