Added description to show_logs help content

--- a/cgi-bin/lang/en_US/logs.html
+++ b/cgi-bin/lang/en_US/logs.html
@@ -1,3 +1,3 @@
 <p>
-This interface allows you to view latest entries in each logs stored under the logdir repository. Click on the filename to view it.
+This interface allows you to view latest entries in each log stored under the logdir repository. Click on the filename to view it. Potentially binary files are shown without hyperlinks.
 </p>
