Index note change

--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -21,15 +21,15 @@
 		This menu allows you to examine the SquidGuard configuration file.
 
 	<b>Manage Lists:</b>
-		This menu allows you to manage all lists by editing them fully or adding/removing entries.
+		This menu allows you to manage blocklists by editing them fully or adding/removing entries.
 
 	<b>Logs:</b>
-		This menu allows you to consult all log files you'd defined in the SquidGuard configuration.
+		This menu allows you to consult all log files in the log directory you'd defined in the SquidGuard global configuration.
 
 	<b>SquidClamav:</b>
 		This link leads you to the GUI interface to administer SquidClamav configuration file. This interface is enabled
 		only if you have SquidClamav installed on your system.
 
 	<b>Restart Squid</b>
-		This menu allows you to 'reconfigure' or quick-restart Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
+		This link allows you to 'reconfigure' or quick-restart Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
 </pre>
