Index note change 2

--- a/cgi-bin/lang/en_US/index.html
+++ b/cgi-bin/lang/en_US/index.html
@@ -31,5 +31,6 @@
 		only if you have SquidClamav installed on your system.
 
 	<b>Restart Squid</b>
-		This link allows you to 'reconfigure' or quick-restart Squid to make it recognize SquidGuard and/or SquidClamav configuration changes you made.
+		This link allows you to 'reconfigure' or quick-restart Squid to make it recognize the changes you made on SquidGuard and/or
+		SquidClamav configuration.
 </pre>
